# financial-agent-spdd

./: .env.example  .gitignore  README.md  pyproject.toml
.spdd_specs/tasks/: Task_1_Foundations.trainee.md
app/api/: main.py
app/core/: config.py  exceptions.py  logging.py  services_container.py
app/services/: llm_client.py  llm_service.py
infra/: docker-compose.yml
infra/docker/: Dockerfile.app
tests/: test_config.py  test_healthz.py  test_llm_service.py  test_logging.py
